fixme : 현재 직접 스레드풀을 구현할 경우 스프링컨테이너 안에서 관리가 안되어서 누수가 일어난다. 이에대해 수정 본을 위해 커밋한다

--- a/docker-file/Dockerfile
+++ b/docker-file/Dockerfile
@@ -6,4 +6,4 @@ ADD ku-thug-manager-0.0.1-SNAPSHOT.jar thug-manager.jar
 ADD test.csv urls.csv
 
 # Define default command.
-CMD java -jar  -Durl.csv.path=urls.csv thug-manager.jar
+CMD java -Xmx1024m -jar  -Durl.csv.path=urls.csv thug-manager.jar
