--- a/docker-file/Dockerfile
+++ b/docker-file/Dockerfile
@@ -2,8 +2,9 @@
 FROM java:8
 
 WORKDIR /
-ADD ku-thug-manager-0.0.1-SNAPSHOT.jar thug-manager.jar
-ADD test.csv urls.csv
+ADD ku-thug-manager-0.0.1.jar thug-manager.jar
+ADD url.config url.config
+ADD agent.config agent.config
 
 # Define default command.
-CMD java -Xmx1024m -jar  -Durl.csv.path=urls.csv thug-manager.jar
+CMD java -Xmx2048m -jar  -Durl.config.path=url.config -Dagent.config.path=agent.config thug-manager.jar
